// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simple fn export 1`] = `
{
  "aliases": [],
  "exports": [
    {
      "end": 16,
      "kind": "export",
      "ref": {
        "calls": [],
        "end": 59,
        "kind": "fn",
        "name": "one",
        "nameElem": {
          "end": 26,
          "kind": "fnName",
          "name": "one",
          "start": 23,
        },
        "start": 20,
        "typeRefs": [
          {
            "end": 35,
            "kind": "typeRef",
            "name": "i32",
            "start": 32,
          },
        ],
      },
      "start": 8,
    },
  ],
  "fns": [
    {
      "calls": [],
      "end": 59,
      "kind": "fn",
      "name": "one",
      "nameElem": {
        "end": 26,
        "kind": "fnName",
        "name": "one",
        "start": 23,
      },
      "start": 20,
      "typeRefs": [
        {
          "end": 35,
          "kind": "typeRef",
          "name": "i32",
          "start": 32,
        },
      ],
    },
  ],
  "imports": [],
  "kind": "text",
  "name": "my.module",
  "preppedSrc": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
  "src": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
  "srcMap": SrcMap {
    "dest": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
    "entries": [
      {
        "destEnd": 62,
        "destStart": 0,
        "src": "
    // #export
    fn one() -> i32 {
      return 1;
    }
  ",
        "srcEnd": 62,
        "srcStart": 0,
      },
    ],
  },
  "structs": [],
  "template": undefined,
  "vars": [],
}
`;

exports[`simple fn import 1`] = `
{
  "aliases": [],
  "exports": [],
  "fns": [
    {
      "calls": [
        {
          "end": 38,
          "kind": "call",
          "name": "foo",
          "start": 35,
        },
      ],
      "end": 43,
      "kind": "fn",
      "name": "bar",
      "nameElem": {
        "end": 30,
        "kind": "fnName",
        "name": "bar",
        "start": 27,
      },
      "start": 24,
      "typeRefs": [],
    },
  ],
  "imports": [
    {
      "end": 19,
      "kind": "import",
      "name": "foo",
      "start": 8,
    },
  ],
  "kind": "text",
  "name": "my.module",
  "preppedSrc": "
    // #import foo
    fn bar() { foo(); }
  ",
  "src": "
    // #import foo
    fn bar() { foo(); }
  ",
  "srcMap": SrcMap {
    "dest": "
    // #import foo
    fn bar() { foo(); }
  ",
    "entries": [
      {
        "destEnd": 46,
        "destStart": 0,
        "src": "
    // #import foo
    fn bar() { foo(); }
  ",
        "srcEnd": 46,
        "srcStart": 0,
      },
    ],
  },
  "structs": [],
  "template": undefined,
  "vars": [],
}
`;
